fix spacing between student entries in registration page

--- a/src/main/webapp/app/tutorialgroup/manage/tutorial-registrations/tutorial-registrations.component.scss
+++ b/src/main/webapp/app/tutorialgroup/manage/tutorial-registrations/tutorial-registrations.component.scss
@@ -42,7 +42,6 @@
             align-items: center;
             width: 4rem;
             padding-top: 0.75rem;
-            padding-bottom: 0.75rem;
             white-space: normal;
             overflow-wrap: break-word;
         }
